# Joint-DAS

./: .gitignore  LICENSE  README.md  RESULTS.md  jdas.toml  main.py  pyproject.toml
docs/: DESIGN.md  OVERVIEW.md
docs/features/: jdas_core.md  lm_phase.md  toy_tasks.md  unified-cli.md  variable-gates.md
experiments/: analyze.py  analyze_gates.py  analyze_night2.py  analyze_studies.py  analyze_toy_lm.py  introspect_phase_a.py  introspect_toy.py  run_phase_a.py  run_phase_b.py  screen_lm.py  search_baseline.py  seed_study.py
experiments/results/: introspect_hier_l1_s0.json  introspect_hier_l1_s0.md  night2_summary.md  phase_a_analysis.md  phase_a_summary.md  phase_b_summary.md  screen_1.5b_t3.json  screen_Qwen_Qwen2.5-0.5B-Instruct.json  screen_Qwen_Qwen2.5-1.5B-Instruct.json  smoke_joint.json
experiments/sweeps/: capped_lm.toml  gates_lm_v1.toml  gates_lm_v2.toml  gates_lm_v3.toml  gates_toy_v1.toml  gates_toy_v2.toml  gates_toy_v3.toml  night2_capped_lm.toml
scripts/: gates_lm_node0.sh  gates_lm_node1.sh  gates_lm_node2.sh  gates_toy_node0.sh  gates_toy_node1.sh  gates_toy_node2.sh  gates_v2_node0.sh  gates_v2_node1.sh  gates_v2_node2.sh  gates_v3_node0.sh  gates_v3_node1.sh  gates_v3_node2.sh  launch_gates_lm.sh  launch_phase_a.sh  rerun_baselines.sh  sweep_gates_toy.sh  sync_nodes.sh
src/jdas/: __init__.py  causal_model.py  eval.py  gates.py  hypotheses.py  intervention.py  rotation.py  training.py  types.py
tests/cli/: test_cluster.py  test_config.py  test_main.py  test_sweeps.py
tests/core/: fakes.py  test_causal_model.py  test_eval.py  test_gates.py  (+5 more)
(+232 files in other folders)
