[project]
name = "learning-causal-representations"
version = "0.1.0"
description = "Joint-DAS: learning causal representations jointly with distributed alignment search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.1",
    "transformers==4.53.2",
    "numpy==2.3.1",
    "matplotlib==3.10.3",
    "einops==0.8.1",
    "accelerate==1.8.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
